Open source r13y again

--- a/r13y/src/bin/template.html
+++ b/r13y/src/bin/template.html
@@ -132,7 +132,6 @@ Freenode. We can work together to write docs on how to use it.</small>
 
 <hr />
 
-<small>Generated at {now} from
-<strike><a href="https://github.com/grahamc/r13y.com">https://github.com/grahamc/r13y.com</a></strike><em>unfairly closed source software</em>.</small>
+<small>Generated at {now} from <a href="https://github.com/grahamc/r13y.com">https://github.com/grahamc/r13y.com</a>.</small>
 <center><img style="max-width: 100px" src="https://nixos.org/logo/nixos-logo-only-hires.png" /></center>
 </body></html>
