Clarify status, close #1

--- a/src/bin/template.html
+++ b/src/bin/template.html
@@ -67,7 +67,7 @@ git checkout {revision}
 nix-build ./nixos/release-combined.nix -A nixos.iso_minimal.x86_64-linux
 </pre>
 
-<h1 style="color: green">{reproduced} / {total} ({percent}) are reproducible!</h1>
+<h1 style="color: green">{reproduced} out of {total} ({percent}) paths in the minimal installation image are reproducible!</h1>
 <p>{unchecked} unchecked</p>
 <hr>
 <h3>unreproduced paths</h3>
