Fix prose, close #2

--- a/src/bin/template.html
+++ b/src/bin/template.html
@@ -88,7 +88,7 @@ layer, but many of the reproducibility issues are being exercised
 already. It isn't possible to <em>guarantee</em> a package is
 reproducible, just like it isn't possible to prove software is
 bug-free. It is possible there is nondeterminism in a package source,
-waiting for the some specific circumstance.</p>
+waiting for some specific circumstance.</p>
 
 <p>This is why we run these tests: to track how we are doing over
 time, to submit bug fixes for nondeterminism when we find them.</p>
