--- a/src/report/template.html
+++ b/src/report/template.html
@@ -108,7 +108,7 @@ are two routes.</p>
 <p>Pretending you are debugging a nondeterminism bug in
 <code>hello</code>. To check it, you build the package, and then
 build it again with <code>--check --keep-failed</code>. This will
-provide the differing output in a separate directory whic you can
+provide the differing output in a separate directory which you can
 use <code>diffoscope</code> on.</p>
 
 <pre>
