point users to matrix room
Signed-off-by: Arthur Gautier <baloo@superbaloo.net>

--- a/src/report/template.html
+++ b/src/report/template.html
@@ -98,7 +98,7 @@ time, to submit bug fixes for nondeterminism when we find them.</p>
 <ul>
 <li>Look at <a href="https://github.com/NixOS/nixpkgs/issues?q=is%3Aopen+is%3Aissue+label%3A%226.topic%3A+reproducible+builds%22">issues</a> and <a href="https://github.com/NixOS/nixpkgs/pulls?q=is%3Aopen+is%3Apr+label%3A%226.topic%3A+reproducible+builds%22">pull requests</a> with the 'reproducible builds' label.</li>
 <li>Open new issues/PR's for reproducibility problems (like the ones reported above)</li>
-<li>Join the <a href="https://matrix.to/#/#reproducible-builds:nixos.org">#reproducible-builds:nixos.org</a> channel on Matrix</li>
+<li>Join the <a href="https://matrix.to/#/#reproducible-builds:nixos.org">#reproducible-builds:nixos.org</a> room on Matrix</li>
 </ul>
 
 <h3 id="next-steps">How can we do better?</h3>
