Point to Matrix

--- a/src/report/template.html
+++ b/src/report/template.html
@@ -134,8 +134,9 @@ collector.</p>
 
 <p><small>There is support for an automatic <code>diff-hook</code> in
 Nix 2, but it is much more complicated to set up. If you would like to
-work on this, or need help setting it up, contact gchristensen on
-Freenode. We can work together to write docs on how to use it.</small>
+work on this, or need help setting it up,
+<a href="https://matrix.to/#/!LemuOOvbWqRXodtSsw:nixos.org?via=nixos.org&via=matrix.org">contact us on Matrix.</a>
+We can work together to write docs on how to use it.</small>
 </p>
 
 <hr />
