--- a/src/report/template.html
+++ b/src/report/template.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title>Is NixOS Reproducible?</title>
-<meta name="description" content="nixos-unstable's iso_minimal.x86_64-linux build is {percent} reproducible!" />
+<meta name="description" content="nixos-unstable's {attr_name} build is {percent} reproducible!" />
 
 <!-- Twitter Card data -->
 <meta name="twitter:card" value="summary">
@@ -11,7 +11,7 @@
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://r13y.com/" />
 <meta property="og:image" content="https://nixos.org/logo/nixos-logo-only-hires.png" />
-<meta property="og:description" content="nixos-unstable's iso_minimal.x86_64-linux build is {percent} reproducible!" />
+<meta property="og:description" content="nixos-unstable's {attr_name} build is {percent} reproducible!" />
 <style>
 body {{
     max-width: 50em;
@@ -58,16 +58,16 @@ body {{
 </h1>
 <h1>Is NixOS Reproducible?</h1>
 <h2>Tracking: <code>nixos-unstable</code>'s
-    <code>iso_minimal</code> job for <code>x86_64-linux</code>.</h2>
+    <code>{attr_name}</code> job for <code>x86_64-linux</code>.</h2>
 <p>Build via:</p>
 <pre>
 git clone https://github.com/nixos/nixpkgs.git
 cd nixpkgs
 git checkout {revision}
-nix-build ./nixos/release-combined.nix -A nixos.iso_minimal.x86_64-linux
+nix-build ./nixos/release-combined.nix -A nixos.{attr_name}
 </pre>
 
-<h1 style="color: green">{reproduced} out of {total} ({percent}) paths in the minimal installation image are reproducible!</h1>
+<h1 style="color: green">{reproduced} out of {total} ({percent}) paths in the {attr_name} installation image are reproducible!</h1>
 <p>{unchecked} unchecked</p>
 <hr>
 <h3>unreproduced paths</h3>
