report unchecked paths
Signed-off-by: Arthur Gautier <baloo@superbaloo.net>

--- a/src/report/template.html
+++ b/src/report/template.html
@@ -74,6 +74,11 @@ nix-build ./nixos/release-combined.nix -A nixos.iso_minimal.x86_64-linux
 <ul>
 {unreproduced_list}
 </ul>
+<hr>
+<h3>unchecked paths</h3>
+<ul>
+{unchecked_list}
+</ul>
 
 <hr />
 <h3 id="test-circumstance">How are these tested?</h3>
